# dde-shell-weather-plugin

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  weatherapplet.cpp  weatherapplet.h  weatherprovider.cpp  weatherprovider.h
.github/workflows/: build.yml  deb.yml
config/geoclue/: 90-dde-shell.conf
debian/: changelog  control  copyright  postinst  rules
docs/: TODO.md  TODOs.md  development.md  weather-provider-candidates.md
docs/superpowers/specs/: 2026-04-12-weather-install-prompt-design.md
package/: ParticleWeather.qml  WeatherIcon.qml  main.qml  metadata.json
package/icons/: README.md
scripts/: compare_geoip_services.py  generate_china_cities.py
src/: animatedsvgitem.cpp  animatedsvgitem.h  chinacitydb.cpp  chinacitydb.h  installprompt.cpp  installprompt.h  installpromptmain.cpp  locationsettingsdialog.cpp  locationsettingsdialog.h  weatherapplet.cpp  weatherapplet.h  weatherprovider.cpp  weatherprovider.h
tests/: animatedsvgitem_test.cpp  chinacitydb_test.cpp  installprompt_test.cpp  postinst_env_test.sh
translations/: org.deepin.ds.weather.ts  org.deepin.ds.weather_ar.ts  org.deepin.ds.weather_az.ts  org.deepin.ds.weather_bo.ts  org.deepin.ds.weather_ca.ts  org.deepin.ds.weather_de.ts  org.deepin.ds.weather_es.ts  org.deepin.ds.weather_fi.ts  org.deepin.ds.weather_fr.ts  org.deepin.ds.weather_hu.ts  org.deepin.ds.weather_it.ts  org.deepin.ds.weather_ja.ts  org.deepin.ds.weather_ko.ts  org.deepin.ds.weather_lo.ts  org.deepin.ds.weather_nb_NO.ts  org.deepin.ds.weather_pl.ts  org.deepin.ds.weather_pt_BR.ts  org.deepin.ds.weather_ru.ts  org.deepin.ds.weather_sq.ts  org.deepin.ds.weather_uk.ts  org.deepin.ds.weather_zh_CN.ts  org.deepin.ds.weather_zh_HK.ts  org.deepin.ds.weather_zh_TW.ts
